welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: reassignment to val
			else (die1= die1 + 1)}
                                  ^withoutDoubles:2: error: type mismatch;
 found   : Unit
 required: Int
	if (noDoubles) {
        ^